--- a/index.html
+++ b/index.html
@@ -11,23 +11,27 @@
 </head>
 
 <body>
-    <div class="greetings">
-        <span>M</span>
-        <span>I&emsp;</span>
-        <span>R</span>
-        <span>E</span>
-        <span>I</span>
-        <span>N</span>
-        <span>A</span>
-    </div>
-    <div class="description">
-        <span>ESTE DETALLE ES PARA TI 💕</span>
-    </div>
-    <div class="button">
-        <button class="botones">
-            <a href="flor.html" style="color: #fff;">Ver regalo☞💕</a>
-        </button>
-    </div>
+    <header>
+        <div class="greetings">
+            <span>M</span>
+            <span>I&emsp;</span>
+            <span>R</span>
+            <span>E</span>
+            <span>I</span>
+            <span>N</span>
+            <span>A</span>
+        </div>
+    </header>
+    <main>
+        <div class="description">
+            <span>ESTE DETALLE ES PARA TI 💕</span>
+        </div>
+        <div class="button">
+            <button class="botones">
+                <a href="flor.html" style="color: #fff;">Ver regalo☞💕</a>
+            </button>
+        </div>
+    </main>
 
 </body>
 
